<resources>
    <string name="app_name">Ibericoders</string>
    <string name="title_activity_main_gastos">Control de Gastos</string>
    <string name="title_activity_nuevo_gasto">Nuevo Gasto</string>
    <string name="title_activity_listado_actas">Listado de Actas</string>
    <string name="title_activity_main">Ibericoders</string>
    <string name="title_activity_main_actas">Nuevo Acta</string>
    <string name="title_activity_main_dices">Dados</string>
    <string name="text_view_dices_votes">Dados y votaciones</string>
    <string name="text_button_dices">Dados</string>
    <string name="text_button_votes">Votaciones</string>
    <string name="text_dices">Tira el dado</string>
    <string name="text_or">o</string>
    <string name="button_arbitrary">Numero aleatorio</string>
    <string name="roll_description">Roll the dice, bro.</string>
    <string name="text_random_number">0</string>
    <string name="text_votes">Votaciones</string>
    <string name="text_pick_random"> O elige tu propio rango</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_edit_question">Introduce el tema a votar</string>
    <string name="text_button_yes">Opción A / Sí</string>
    <string name="text_button_no">Opción B / NO</string>
    <string name="text_button_C">Opción C</string>
    <string name="text_button_D">Opción D</string>
    <string name="text_button_result">Calcular resultado</string>
    <string name="text_edit_number_voters">Número de participantes</string>
    <string name="button_text_share">Compartir el resultado</string>
    <string name="text_view_topic">Tema de la votación</string>
    <string name="desctiption_votation_button">Pulsa el botón</string>
    <string name="text_view_push">Acceder a la votación</string>
    <string name="text_view_config">Configura la votación</string>
    <string name="title_activity_config_votation">ConfigVotationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_acts_title">Titulo</string>
    <string name="text_view_date_acts">Fecha</string>
    <string name="text_button_exit_acts">Salir</string>
    <string name="image">Image</string>
    <string name="text_name">Nombre</string>
    <string name="text_description">Descripción</string>
    <string name="text_amount">Cantidad</string>
    <string name="text_date">Fecha</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_save">Guardar</string>
    <string name="textNextMeeting">Proxima reunión</string>
    <string name="text_evaluation">Evaluación</string>
    <string name="text_proposals">Propuestas</string>
    <string name="text_compromises">Compromisos</string>
    <string name="next_meeting">Siguiente</string>
    <string name="text_conclusions">Conclusiones</string>
    <string name="text_nextpoints">Puntos Futuros</string>
    <string name="text_memory">Memoria</string>
    <string name="text_reliefs">Relevos</string>
    <string name="text_name_david">David</string>
    <string name="text_name_jorge">Jorge</string>
    <string name="text_name_silvia">Silvia</string>
    <string name="text_name_sergio">Sergio</string>
    <string name="text_name_adrian">Adrián</string>
    <string name="text_name_dei">Dei</string>
    <string name="text_name_alberto">Alberto</string>
    <string name="text_assistants">Asistentes</string>
    <string name="text_title">Titulo</string>
    <string name="text_hour">Hora</string>
    <string name="text_expense_name">Nombre del Gasto</string>
    <string name="text_category">Categoría:</string>
    <string name="text_expenses_date">Fecha:</string>
    <string name="text_expense_description">Descripción:</string>
    <string name="text_expense_amount">Cantidad:</string>
    <string name="dice">Dados</string>
    <string name="text_voting">Votaciones</string>
    <string name="text_act">Actas</string>
    <string name="text_expenses">Gastos</string>
    <string name="export_bbdd">Exportar BBDD</string>
    <string name="filter">Filtro</string>
    <string name="value_bote">Valor del bote:</string>
    <string name="add_expense">AÑADIR GASTO</string>
    <string name="add_to_pot">AÑADIR AL BOTE</string>
    <string name="email_text">Email</string>
    <string name="export">Exportar</string>
    <string name="import_bbdd">Importar BBDD</string>
    <string name="numberOfAnswersTv">Número de respuestas</string>
</resources>
