<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="170dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="save"
        fab:fabSize="mini"
        fab:srcCompat="@android:drawable/ic_input_add" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="enviar"
        fab:fabSize="mini"
        fab:srcCompat="@android:drawable/ic_dialog_email" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="exit"
        fab:elevation="1dp"
        fab:fabSize="normal"
        fab:srcCompat="@android:drawable/ic_delete" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="listado"
        fab:fabSize="mini"
        fab:srcCompat="@android:drawable/ic_menu_agenda" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="5"
                    android:hint="@string/text_title"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:onClick="date"
                android:text="@string/text_date" />

            <TextView
                android:id="@+id/tvHora"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/text_hour"
                android:onClick="hour" />

            <TextView
                android:id="@+id/tvAsistentes"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/text_assistants"
                android:onClick="logCheckbox" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/Alberto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_name_alberto" />

                <CheckBox
                    android:id="@+id/Dei"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_name_dei" />

                <CheckBox
                    android:id="@+id/Adrian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_name_adrian" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/sergio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_name_sergio" />

                <CheckBox
                    android:id="@+id/silvia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_name_silvia" />

                <CheckBox
                    android:id="@+id/jorge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_name_jorge" />

                <CheckBox
                    android:id="@+id/david"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_name_david" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtRelevo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/text_reliefs"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtMemoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/text_memory"
                android:inputType="textMultiLine"/>
                //android:singleLine="false"

            <EditText
                android:id="@+id/edtPuntosF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/text_nextpoints"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtConclusion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/text_conclusions"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtSiguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/next_meeting"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtCompromiso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/text_compromises"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/edtPropuesta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/text_proposals"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtEvaluacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/text_evaluation"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tvProxima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/textNextMeeting"
                android:onClick="date" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>

