<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibericoders.ibericoders.votaciones.VoteActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:id="@+id/textViewTopic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/text_button_yes"

        />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="190dp"
        android:background="@color/colorButtonNo"
        android:text="@string/text_button_no" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:background="@color/colorButtonC"
        android:text="@string/text_button_C" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorButtonD"
        android:text="@string/text_button_D"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="410dp" />

</RelativeLayout>
