<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ibericoders.ibericoders.votaciones.activities.ConfigVotingActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_config_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_view_topic"
            android:inputType="text"
            android:paddingLeft="16sp"
            android:paddingRight="10sp" />
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_votingdescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_description"
            android:inputType="text"
            android:paddingLeft="16sp"
            android:paddingRight="10sp" />
    </android.support.design.widget.TextInputLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_votingdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text_date"
            android:inputType="none"
            android:paddingLeft="16sp"
            android:paddingRight="10sp" />

    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/text_edit_number_voters"
        android:textSize="18sp"
        android:paddingLeft="16sp"
        android:paddingRight="10sp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <SeekBar
            android:id="@+id/seekBarParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/numberOfParticipantsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp" />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/numberOfAnswersTv"
        android:textSize="18sp"
        android:paddingLeft="16sp"
        android:paddingRight="10sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Spinner
        android:id="@+id/sp_numberOfAnswers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="0dp"
            android:onClick="cancel"
            android:text="@string/button_cancel"
            android:textColorLink="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/buttonVote"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="vote"
            android:text="@string/text_votes"
            android:textColorLink="@color/colorPrimaryDark" />
    </LinearLayout>

</LinearLayout>