<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibericoders.ibericoders.dados.MainDicesActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textViewTitleDices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:text="@string/text_dices"
        android:textSize="32sp"
        android:textColor="@color/colorPrimaryDark"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageViewDice"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/dice3droll"
        android:contentDescription="@string/roll_description"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/textViewTitleDices"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_pick_random"
        android:textColor="@color/colorSecondaryText"
        android:textSize="22sp"
        android:layout_marginBottom="27dp"
        android:layout_above="@+id/seekBarMaximum"
        android:layout_centerHorizontal="true" />


    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:id="@+id/seekBarMaximum"
        android:layout_above="@+id/buttonArbitrary"
        android:layout_alignLeft="@+id/buttonArbitrary"
        android:layout_alignStart="@+id/buttonArbitrary"
        android:layout_alignRight="@+id/textViewRandom"
        android:layout_alignEnd="@+id/textViewRandom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewMaximum"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/textViewRandom"
        android:layout_alignRight="@+id/buttonArbitrary"
        android:layout_alignEnd="@+id/buttonArbitrary" />

    <Button
        android:id="@+id/buttonArbitrary"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_arbitrary"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_alignBottom="@+id/textViewArbitraryNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp" />

    <TextView
        android:id="@+id/textViewArbitraryNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_random_number"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="42sp"
        android:layout_marginBottom="21dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>